# essence-of-live-coding

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  cabal-freeze.sh  cabal.96andAbove.project  cabal.project  cabal.project.8.10.7.freeze  cabal.project.8.8.4.freeze  cabal.project.9.0.2.freeze  cabal.project.freeze  default.nix  essenceoflivecoding.cabal  flake.nix  replcommands.txt  run_fourmolu.sh  shell.nix  stack.8.10.3.yaml  stack.8.10.7.yaml  stack.8.6.5.yaml  stack.8.8.4.yaml  stack.9.0.2.yaml  stack.9.2.4.yaml  stack.9.2.5.yaml  stack.9.4.5.yaml  stack.yaml  test-repl.sh  travis-build.sh
app/: Demo.hs  DemoSine.hs  DemoSineChange.hs  DemoSineWait.hs  DemoSineWaitChange.hs  DemoSinesForever.hs  (+5 more)
demos/: CHANGELOG.md  DemoSine.txt  DemoSineWait.txt  DemoSineWaitChange.txt  DemoSinesForever.txt  demos.cabal  stack.yaml
demos/app/: DemoSine.hs  DemoSineWait.hs  DemoSineWaitChange.hs  DemoSinesForever.hs  DemoWai.hs  Examples.hs
demos/app/DemoWai/: DemoWai1.lhs  DemoWai2.lhs  Env.lhs
essence-of-live-coding/: .ghci  CHANGELOG.md  README.md  essence-of-live-coding.cabal  stack.yaml
essence-of-live-coding-PortMidi/: CHANGELOG.md  essence-of-live-coding-PortMidi.cabal
essence-of-live-coding-PortMidi/src/LiveCoding/: PortMidi.hs
essence-of-live-coding-PortMidi/src/LiveCoding/PortMidi/: Internal.hs
essence-of-live-coding-frp/: LICENSE  essence-of-live-coding-frp.cabal
essence-of-live-coding-frp/src/LiveCoding/: FRP.hs
essence-of-live-coding-frp/src/LiveCoding/FRP/: Curry.hs
essence-of-live-coding-ghci-example/: CHANGELOG.md  LICENSE  essence-of-live-coding-ghci-example.cabal
essence-of-live-coding-ghci-example/app/: Main.hs
essence-of-live-coding-gloss/: .ghci  CHANGELOG.md  essence-of-live-coding-gloss.cabal  stack.yaml
essence-of-live-coding-gloss-example/: .ghci  essence-of-live-coding-gloss-example.cabal  stack.yaml
essence-of-live-coding-gloss-example/app/: Gears.hs  Main.hs
essence-of-live-coding-gloss/src/LiveCoding/: Gloss.hs
essence-of-live-coding-gloss/src/LiveCoding/Gloss/: Debugger.hs  GHCi.hs  PictureM.hs
essence-of-live-coding-json/: CHANGELOG.md  essence-of-live-coding-json.cabal
essence-of-live-coding-json/src/LiveCoding/: JSON.hs
essence-of-live-coding-pulse/: CHANGELOG.md  essence-of-live-coding-pulse.cabal  stack.yaml
essence-of-live-coding-pulse-example/: .ghci  .ghcid  essence-of-live-coding-pulse-example.cabal  stack.yaml
essence-of-live-coding-pulse-example/app/: Main.hs
essence-of-live-coding-pulse/src/LiveCoding/: Pulse.hs
essence-of-live-coding-pulse/src/LiveCoding/Pulse/: GHCi.hs
essence-of-live-coding-quickcheck/: CHANGELOG.md  essence-of-live-coding-quickcheck.cabal  stack.yaml
essence-of-live-coding-quickcheck/src/LiveCoding/: QuickCheck.lhs
essence-of-live-coding-speedtest-yampa/: essence-of-live-coding-speedtest-yampa.cabal  stack.yaml
essence-of-live-coding-speedtest-yampa/app/: SpeedTest.hs  SpeedTestYampa.hs
essence-of-live-coding-vivid/: CHANGELOG.md  essence-of-live-coding-vivid.cabal
essence-of-live-coding-vivid/src/LiveCoding/: Vivid.hs
essence-of-live-coding-warp/: .ghcid  CHANGELOG.md  essence-of-live-coding-warp.cabal
essence-of-live-coding-warp/src/LiveCoding/: Warp.hs
essence-of-live-coding-warp/test/: Main.hs
essence-of-live-coding/app/: TestExceptions.hs  TestNonBlocking.hs
essence-of-live-coding/src/: DataPointer.hs  LiveCoding.hs  LiveCoding.lhs
essence-of-live-coding/src/Data/Data/: Util.hs
essence-of-live-coding/src/LiveCoding/: Bind.lhs  Cell.lhs  CellExcept.lhs  Coalgebra.lhs  Debugger.lhs  Exceptions.lhs  External.hs  Forever.lhs  GHCi.hs  GHCi.lhs  Handle.hs  HandlingState.hs  LiveBind.lhs  LiveProgram.lhs  Migrate.lhs  Optimize.hs  RuntimeIO.lhs
essence-of-live-coding/src/LiveCoding/Cell/: Async.hs  Feedback.lhs  HotCodeSwap.hs  Monad.hs  NonBlocking.hs  Resample.hs  Util.hs
essence-of-live-coding/src/LiveCoding/Cell/Monad/: Trans.hs
essence-of-live-coding/src/LiveCoding/Cell/Util/: Internal.hs
essence-of-live-coding/src/LiveCoding/Debugger/: StatePrint.hs
essence-of-live-coding/src/LiveCoding/Exceptions/: Finite.lhs
essence-of-live-coding/src/LiveCoding/Handle/: Examples.hs
essence-of-live-coding/src/LiveCoding/HandlingState/: AccumTOrphan.hs
essence-of-live-coding/src/LiveCoding/LiveProgram/: Except.hs  HotCodeSwap.lhs
essence-of-live-coding/src/LiveCoding/LiveProgram/Monad/: Trans.hs
essence-of-live-coding/src/LiveCoding/Migrate/: Cell.hs  Debugger.hs  Migration.hs  NoMigration.hs
essence-of-live-coding/src/LiveCoding/Migrate/Monad/: Trans.hs
essence-of-live-coding/src/LiveCoding/Preliminary/: CellExcept.lhs
essence-of-live-coding/src/LiveCoding/Preliminary/CellExcept/: Applicative.lhs  Monad.lhs  Newtype.lhs  Selective.hs
essence-of-live-coding/src/LiveCoding/Preliminary/LiveProgram/: HotCodeSwap.lhs  LiveProgram2.lhs  LiveProgramPreliminary.lhs
essence-of-live-coding/src/LiveCoding/RuntimeIO/: Launch.hs
essence-of-live-coding/test/: Cell.hs  Feedback.hs  Handle.hs  HandlingState.hs  Main.hs  Migrate.hs  Monad.hs  Util.hs
essence-of-live-coding/test/Cell/: Selective.hs  Util.hs
essence-of-live-coding/test/Cell/Monad/: Trans.hs
essence-of-live-coding/test/Cell/Util/: Random.hs  Traversable.hs
essence-of-live-coding/test/Handle/: LiveProgram.hs
essence-of-live-coding/test/Migrate/: NoMigration.hs
essence-of-live-coding/test/Monad/: Trans.hs
essence-of-live-coding/test/RuntimeIO/: Launch.hs
essence-of-live-coding/test/TestData/: Foo1.hs  Foo2.hs
essence-of-live-coding/test/Util/: LiveProgramMigration.hs
essenceoflivecoding-ghci/: .ghci  CHANGELOG.md  LICENSE  essenceoflivecoding-ghci.cabal  stack.yaml
essenceoflivecoding-ghci/app/: GHCiTest.hs
essenceoflivecoding-ghci/src/LiveCoding/: GHCi.lhs
essenceoflivecoding-pulse-example/: CHANGELOG.md  essenceoflivecoding-pulse-example.cabal  stack.yaml
essenceoflivecoding-pulse-example/app/: Main.hs
essenceoflivecoding-speedtest-yampa/: essenceoflivecoding-speedtest-yampa.cabal  stack.yaml
essenceoflivecoding-speedtest-yampa/app/: SpeedTest.hs
(+103 files in other folders)
