name:                essenceoflivecoding
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
      LiveCoding
    , LiveCoding.Bind
    , LiveCoding.Cell
    , LiveCoding.CellExcept
    , LiveCoding.CellExcept.Applicative
    , LiveCoding.CellExcept.Monad
    , LiveCoding.Commutable
    , LiveCoding.Coalgebra
    , LiveCoding.Debugger
    , LiveCoding.Debugger.StatePrint
    , LiveCoding.Exceptions
    , LiveCoding.Forever
    , LiveCoding.LiveProgram
    , LiveCoding.Migrate
    , LiveCoding.RuntimeIO

  other-modules:
      LiveCoding.CellExcept.Newtype
    , LiveCoding.LiveProgram.Preliminary.HotCodeSwap
    , LiveCoding.LiveProgram.Preliminary.LiveProgram2
    , LiveCoding.LiveProgram.Preliminary.LiveProgramPreliminary

  other-extensions:    DeriveDataTypeable
  build-depends:
      base >=4.11 && <4.13
    , transformers == 0.5.*
    , syb == 0.7.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite essenceoflivecoding
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      TestData.Foo1
    , TestData.Foo2
  hs-source-dirs: test
  build-depends:
      base >=4.11 && <4.13
    , syb == 0.7.*
    , essenceoflivecoding

executable DemoSine
  main-is: DemoSine.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding

executable DemoSineChange
  main-is: DemoSineChange.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding

executable TestExceptions
  main-is: TestExceptions.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding
    , transformers == 0.5.*

executable DemoSinesForever
  main-is: DemoSinesForever.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding

executable DemoWai
  main-is: DemoWai.hs
  other-modules:
      DemoWai.Env
      DemoWai.DemoWai1
      DemoWai.DemoWai2
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding
    , transformers == 0.5.*
    , wai  == 3.2.*
    , warp == 3.2.*
    , http-types == 0.12.*
    , bytestring == 0.10.*

executable SpeedTest
  main-is: SpeedTest.hs
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding
    , transformers == 0.5.*

executable SpeedTestYampa
  main-is: SpeedTestYampa.hs
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , Yampa
