name:                demos
version:             0.2.0.0
synopsis: General purpose live coding framework - Demo applications
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  There are also useful utilities for debugging and quickchecking.
  .
  This package contains simple demos that are used in the article
  (https://www.manuelbaerenz.de/essence-of-live-coding/EssenceOfLiveCoding.pdf),
  such as sine generators, control flow and a WAI webserver example.

license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git

source-repository this
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git
  tag:      v0.2.0.1

executable DemoSine
  main-is: DemoSine.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding

executable DemoSineWait
  main-is: DemoSineWait.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding

executable DemoSineWaitChange
  main-is: DemoSineWaitChange.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding

executable DemoSinesForever
  main-is: DemoSinesForever.hs
  other-modules:
      Examples
  hs-source-dirs: app
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding

executable DemoWai
  main-is: DemoWai.hs
  other-modules:
      DemoWai.Env
      DemoWai.DemoWai1
      DemoWai.DemoWai2
  hs-source-dirs: app
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding >= 0.2.1
    , transformers >= 0.5
    , wai  >= 3.2
    , warp >= 3.2
    , http-types >= 0.12
    , bytestring >= 0.10
