cabal-version:      2.4
name:               essence-of-live-coding-ghci-example
version:            0.2.5

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Manuel Bärenz
maintainer:         m.baerenz@sonnen.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable essence-of-live-coding-ghci-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.11 && < 5
      , essence-of-live-coding >= 0.2.5
    hs-source-dirs:   app
    default-language: Haskell2010
