cabal-version:       2.4
-- Initial package description 'essence-of-live-coding-gloss.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                essence-of-live-coding-gloss
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            Graphics
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    LiveCoding.Gloss
    LiveCoding.Gloss.Debugger
    LiveCoding.Gloss.GHCi
    LiveCoding.Gloss.PictureM
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.12.0.0
    , syb
    , transformers
    , essence-of-live-coding
    , foreign-store
    , gloss
  hs-source-dirs:      src
  default-language:    Haskell2010
