name:                essence-of-live-coding-json
version:             0.2.0.1
synopsis: General purpose live coding framework
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  This library provides a simple JSON interface to persist the state of a live program in a file,
  across recompilation.

license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git

source-repository this
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git
  tag:      v0.1.0.3


library
  exposed-modules:
      LiveCoding.JSON

  other-extensions:    DeriveDataTypeable
  build-depends:
      base >= 4.11 && < 5
    , syb >= 0.7
    , json >= 0.10
    , essence-of-live-coding >= 0.2.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base >= 4.11 && < 5
    , syb >= 0.7
    , essence-of-live-coding
    , essence-of-live-coding-json
    , test-framework >= 0.8
    , test-framework-quickcheck2 >= 0.3
    , QuickCheck >= 2.12
  default-language:    Haskell2010
