name:                essence-of-live-coding-pulse-example
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            Sound
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable essence-of-live-coding-pulse-example
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11
    , transformers
    , pulse-simple == 0.1.*
    , vector
    , essence-of-live-coding
    , essence-of-live-coding-pulse
  hs-source-dirs:      app
  default-language:    Haskell2010
