name:                essence-of-live-coding-pulse
version:             0.1.0.1
synopsis: General purpose live coding framework - pulse backend
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  There are also useful utilities for debugging and quickchecking.
  .
  This package contains the backend for PulseAudio.

license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    LiveCoding.Pulse
    LiveCoding.Pulse.GHCi
  build-depends:
      base >= 4.11 && <4.13
    , essence-of-live-coding
    , transformers
    , pulse-simple == 0.1.*
    , foreign-store
  hs-source-dirs:      src
  default-language:    Haskell2010
