name:                essence-of-live-coding-quickcheck
version:             0.2.6
synopsis: General purpose live coding framework - QuickCheck integration
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  .
  This package contains useful utilities for quickchecking.

license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git

source-repository this
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git
  tag:      v0.2.6


library
  exposed-modules:     LiveCoding.QuickCheck
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding >= 0.2.6
    , transformers >= 0.5
    , syb >= 0.7
    , QuickCheck >= 2.12
    , boltzmann-samplers >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  StrictData
