name:               essence-of-live-coding-vivid
version:            0.2.6
synopsis: General purpose live coding framework - vivid backend
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  There are also useful utilities for debugging and quickchecking.
  .
  This package contains the backend for vivid, a Supercollider library.
license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
copyright:           2021 Manuel Bärenz
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        LiveCoding.Vivid

    build-depends:
        base >= 4.7 && < 5
      , vivid >= 0.5.2.0
      , essence-of-live-coding >= 0.2.6
    hs-source-dirs:   src
    default-language: Haskell2010
