name:                essence-of-live-coding
version:             0.1.0.1
synopsis: General purpose live coding framework
description:
  essence-of-live-coding is a general purpose and type safe live coding framework.
  .
  You can run programs in it, and edit, recompile and reload them while they're running.
  Internally, the state of the live program is automatically migrated when performing hot code swap.
  .
  The library also offers an easy to use FRP interface.
  It is parametrized by its side effects,
  separates data flow cleanly from control flow,
  and allows to develop live programs from reusable, modular components.
  There are also useful utilities for debugging and quickchecking.

license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
homepage:            https://www.manuelbaerenz.de/#computerscience
category:            FRP, Live coding
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git

source-repository this
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git
  tag:      v0.1.0.1


library
  exposed-modules:
      LiveCoding
    , LiveCoding.Bind
    , LiveCoding.Cell
    , LiveCoding.Cell.Feedback
    , LiveCoding.Cell.HotCodeSwap
    , LiveCoding.Cell.Resample
    , LiveCoding.CellExcept
    , LiveCoding.Coalgebra
    , LiveCoding.Debugger
    , LiveCoding.Debugger.StatePrint
    , LiveCoding.Exceptions
    , LiveCoding.Exceptions.Finite
    , LiveCoding.External
    , LiveCoding.Forever
    , LiveCoding.LiveProgram
    , LiveCoding.LiveProgram.HotCodeSwap
    , LiveCoding.Migrate
    , LiveCoding.Migrate.Migration
    , LiveCoding.Migrate.Debugger
    , LiveCoding.RuntimeIO

  other-modules:
      LiveCoding.Preliminary.CellExcept
    , LiveCoding.Preliminary.CellExcept.Applicative
    , LiveCoding.Preliminary.CellExcept.Monad
    , LiveCoding.Preliminary.CellExcept.Newtype
    , LiveCoding.Preliminary.LiveProgram.HotCodeSwap
    , LiveCoding.Preliminary.LiveProgram.LiveProgram2
    , LiveCoding.Preliminary.LiveProgram.LiveProgramPreliminary

  other-extensions:    DeriveDataTypeable
  build-depends:
      base >= 4.11 && <4.13
    , transformers == 0.5.*
    , syb == 0.7.*
    , vector-sized == 1.2.*
    , foreign-store
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite essence-of-live-coding
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      TestData.Foo1
    , TestData.Foo2
  hs-source-dirs: test
  build-depends:
      base >= 4.11 && <4.13
    , syb == 0.7.*
    , essence-of-live-coding
    , test-framework == 0.8.*
    , test-framework-quickcheck2 == 0.3.*
    , QuickCheck >= 2.12
  default-language:    Haskell2010

executable TestExceptions
  main-is: TestExceptions.hs
  hs-source-dirs: app
  build-depends:
      base >= 4.11 && <4.13
    , essence-of-live-coding
    , transformers == 0.5.*
  default-language:    Haskell2010
