cabal-version:       2.4
-- Initial package description 'essenceoflivecoding-ghci.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                essenceoflivecoding-ghci
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     LiveCoding.GHCi
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding == 0.1.*
    , foreign-store
  hs-source-dirs:      src
  default-language:    Haskell2010

executable GHCiTest
  main-is: GHCiTest.hs
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding
    , foreign-store
