name:                essenceoflivecoding-pulse-example
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
category:            Sound
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable essenceoflivecoding-pulse-example
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11
    , transformers
    , pulse-simple == 0.1.*
    , vector
    , essenceoflivecoding
    , essenceoflivecoding-pulse
  hs-source-dirs:      app
  default-language:    Haskell2010
