name:                essenceoflivecoding-speedtest-yampa
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable SpeedTest
  main-is: SpeedTest.hs
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , essenceoflivecoding
    , transformers == 0.5.*

executable SpeedTestYampa
  main-is: SpeedTestYampa.hs
  hs-source-dirs: app
  build-depends:
      base >=4.11 && <4.13
    , Yampa
